# TextRecognition

./: CMakeLists.txt  README.md
Chapter_10/: segment.cpp  segmentOcr.cpp  segmentOcrHigh.cpp
include/: MyTesseract.h  PreprocessTesseract.h
src/: segment.cpp  segmentOcr.cpp  segmentOcrHigh.cpp
src/demo/: CMakeLists.txt  demo.cpp
src/lib/: CMakeLists.txt
src/lib/myTesseract/: MyTesseract.cpp  PreprocessTesseract.cpp
